# alinvoinea-lambda

./: README.md  release.sh
fn-alinvoinea-api/: Cargo.toml  build.sh  create-lambda.sh  kms-decrypt-policy.json  lambda-function-permission.json  package_all.sh  secrets-manager-policy.json  update-lambda.sh  watch.sh
fn-alinvoinea-api/src/: main.rs  route_action.rs
lib-alinvoinea-common/: Cargo.toml  deploy.sh  package.sh
lib-alinvoinea-common/src/: lib.rs  not_yet_implemented.rs
lib-alinvoinea-graphql/: Cargo.toml  deploy.sh  package.sh
lib-alinvoinea-graphql/src/: lib.rs
lib-alinvoinea-secret/: Cargo.toml  deploy.sh  package.sh
lib-alinvoinea-secret/src/: lib.rs
tests/: invoke_local.sh  invoke_local_assets.sh  invoke_local_categories.sh  invoke_remote.sh  query-categories-payload.json
