[package]
name = "alinvoinea-api"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
lambda_runtime = "0.11.2"
aws_lambda_events = "0.15.1"
aws-config = "1.5.1"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
reqwest = { version = "0.12.4", features = ["json"] }
#if not adding openssl, the reqwest will cause the build to fail
openssl = { version = "0.10.64", features = ["vendored"] }

alinvoinea_graphql = { path = "../lib-alinvoinea-graphql" }
