[package]
name = "alinvoinea_graphql"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.136"
serde_json = "1.0.117"
aws-config = "1.5.1"
aws-sdk-secretsmanager = "1.30.0"
aws_lambda_events = "0.15.1"
lambda_runtime = "0.11.2"
reqwest = { version = "0.12.4", features = ["json"] }
#if not adding openssl, the reqwest will cause the build to fail
openssl = { version = "0.10.64", features = ["vendored"] }

alinvoinea_secret = { path = "../lib-alinvoinea-secret" }
